<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 Mnubo. Released under MIT License.
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_menu_objects"
        android:title="@string/menu_objects"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_menu_owner"
        android:title="@string/menu_owner"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_menu_windturbine"
        android:title="@string/menu_windturbine"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_menu_tennis"
        android:title="@string/menu_tennis"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_menu_resend_events"
        android:title="@string/menu_resend"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_menu_logout"
        android:title="@string/menu_logout"
        app:showAsAction="never" />
</menu>